--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h2 {
     height: 60px;
     margin: 20px;
     padding:10px;
+    color: black;
 }
 .notgay {
     background-color: green;
@@ -31,4 +32,5 @@ h2 {
     height: 60px;
     margin: 20px;
     padding:10px;
+    color: black;
 }
